# humidserv

./: .gitignore
client/: .eslintrc.cjs  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  config.ts  global.css  index.tsx  theme.ts  types.ts
client/src/components/: DataDisplay.tsx  LineChart.tsx  TimeframeProvider.tsx  Typography.tsx
client/src/components/DataDisplay/: index.tsx  useGetParsedData.ts
client/src/components/OptionSelector/: index.tsx
client/src/hooks/: useAxiosGet.ts
firmware/sensor-module/: sensor-module.ino  sketch.yaml
server/: Cargo.toml
server/src/: constants.rs  error.rs  handlers.rs  main.rs
