[package]
name = "humidserv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
http = "1.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlite = "0.34.0"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
